<resources xmlns:tools="http://schemas.android.com/tools"
  tools:override="true"
  tools:ignore="MissingTranslation,PrivateResource">
  <string name="app_name">Layout Editor</string>
  <string name="app_slogan">Create Awesome UI!</string>
  <string name="home">HOME</string>
  <string name="preference">PREFERENCES</string>
  <string name="github">GITHUB</string>
  <string name="about">ABOUT</string>
  <string name="share">SHARE</string>
  <string name="open_source_licence">OPEN SOURCE LICENCES</string>
  <string name="projects">Projects</string>
  <string name="title_preference">Preferences</string>
  <string name="title_about">About</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="project_saved">Project saved.</string>
  <string name="new_project">New project</string>
  <string name="layout_saved">Layout Saved</string>
  <string name="new_layout">New Layout</string>
  <string name="layout_empty">Layout empty! Add a view before saving&#8230;</string>
  <string name="add_new">Add new</string>
  <string name="delete">Delete</string>
  <string name="copy">Copy</string>
  <string name="drawable_manager">Drawable Manager</string>
  <string name="xml_preview">XML Preview</string>
  <string name="msg_no_projects">You don\'t have any projects.</string>
  <string name="msg_create_new">Click + icon to create a new project.</string>
  <string name="share_description">Use Layout Editor to easily build Android app layouts by dragging UI elements into a visual layout editor.\n\n### Features\n- Design layout with Drag &amp; Drop\n- Edit view and layout properties\n- See and Copy the XML code of layout\n- More : %1$s#features\n\nDownload from here: %1$s/releases/latest</string>
  <string name="permission_granted">Permission granted&#8230;</string>
  <string name="permission_denied">Permission denied&#8230;</string>
  <string name="preview_layout">Preview Layout</string>
  <string name="copied">Copied to clipboard</string>
  <string name="msg_delete_project">Are you sure want to remove the project?</string>
  <string name="msg_delete_layout">Are you sure, want to remove the layout?</string>
  <string name="delete_project">Delete project</string>
  <string name="create_project">Create project</string>
  <string name="delete_layout">Delete Layout</string>
  <string name="create_layout">Create layout</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="rename">Rename</string>
  <string name="cancel">Cancel</string>
  <string name="create">Create</string>
  <string name="msg_new_project_name">Enter new project name</string>
  <string name="rename_project">Rename project</string>
  <string name="msg_new_layout_name">Enter new layout name</string>
  <string name="rename_layout">Rename Layout</string>
  <string name="msg_current_name_unavailable">Current name is unavailable!</string>
  <string name="msg_cannnot_empty">Field cannot be empty!</string>
  <string name="options">Options</string>
  <string name="enable_vibration">Enable Vibration</string>
  <string name="summary_enable_vibration">May consume battery</string>
  <string name="show_stroke">Show Stroke</string>
  <string name="summary_show_stroke">Show stroke in the editor?</string>
  <string name="remove_drawable">Remove drawable</string>
  <string name="remove_font">Remove font</string>
  <string name="msg_remove_drawable">Do you want to remove the drawable?</string>
  <string name="msg_remove_font">Do you want to remove the font?</string>
  <string name="msg_enter_new_name">Enter new name</string>
  <string name="add_drawable">Add drawable</string>
  <string name="add">Add</string>
  <string name="msg_only_letters_and_numbers">Only small letters(a-z) and numbers!</string>
  <string name="msg_cannot_rename_default">You cannot rename the default %1$s&#8230;</string>
  <string name="msg_cannot_delete_default">You cannot delete the default %1$s&#8230;</string>
  <string name="msg_feature_not_available">This feature is not available yet. Will be available soon.</string>
  <string name="nothing">Nothing&#8230;</string>
  <string name="msg_add_some_widgets">Add some widgets</string>
  <string name="note">Note</string>
  <string name="okay">Okay</string>
  <string name="app_crashed">App crashed</string>
  <string name="close">Close</string>
  <string name="close_app">Close app</string>
  <string name="undo">Undo</string>
  <string name="redo">Redo</string>
  <string name="save">Save</string>
  <string name="show_structure">Show structure</string>
  <string name="show_xml">Show XML</string>
  <string name="save_xml">Save XML</string>
  <string name="delete_view">Delete view</string>
  <string name="msg_delete_view">Do you want to remove the view?</string>
  <string name="select_arg_type">Select argument type</string>
  <string name="select_drawable_type">Select drawable type</string>
  <string name="theme_dark">Dark</string>
  <string name="theme_light">Light</string>
  <string name="theme_auto">Auto</string>
  <string name="choose_theme">Choose theme</string>
  <string name="summary_choose_theme">Apply theme to the app.</string>
  <string name="dynamic_colors">Use Dynamic Colors</string>
  <string name="summary_dynamic_colors">This feature is only for Android 12+.</string>
  <string name="msg_dynamic_colors_dialog">This will close the application with all tasks!.</string>
  <string name="export_layout">Export Layout</string>
  <string name="invalid_data_intent">Invalid Data returned by Intent.</string>
  <string name="select_from_storage">Select file from Primary Storage.</string>
  <string name="msg_first_letter_not_number">The first letter must not be a number!</string>
  <string name="msg_space_not_allowed">The name must not contain spaces.</string>
  <string name="confirm">Confirm</string>
  <string name="confirmation">Confirmation</string>
  <string name="msg_confirmation">Do you want to save this project?</string>
  <string name="do_not_save">Don\'t Save</string>
  <string name="res_manager">Resources Manager</string>
  <string name="font">Font</string>
  <string name="string">String</string>
  <string name="drawable">Drawable</string>
  <string name="color">Color</string>
  <string name="edit_xml">Edit XML</string>
  <string name="drawable_preview">Drawable Preview</string>
  <string name="rename_drawable">Rename Drawable</string>
  <string name="copy_name">Copy Name</string>
  <string name="import_resource">Import</string>
  <string name="color_scheme">Color Scheme</string>
  <string name="select">Select</string>
  <string name="palette">Palette</string>
  <string name="common">Common</string>
  <string name="ui">UI</string>
  <string name="texts">Texts</string>
  <string name="buttons">Buttons</string>
  <string name="widgets">Widgets</string>
  <string name="layouts">Layouts</string>
  <string name="containers">Containers</string>
  <string name="google">Google</string>
  <string name="legacy">Legacy</string>
  <string name="preview_drawable">Preview Drawable</string>
  <string name="export_as_image">Export as Image</string>
  <string name="add_font">Add font</string>
  <string name="rename_font">Rename font</string>
  <string name="design">Design</string>
  <string name="blueprint">Blueprint</string>
  <string name="small">Small</string>
  <string name="medium">Medium</string>
  <string name="large">Large</string>
  <string name="invalid_name">Invalid Name</string>
  <string name="hmmm">¯⁠⁠_⁠(⁠ツ⁠)⁠_⁠/⁠¯</string>
</resources>
