<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory
        app:title="@string/ui">
        <ListPreference
            app:title="@string/choose_theme"
            app:summary="@string/summary_choose_theme"
            app:key="choose_theme"
            app:icon="@drawable/palette"
            app:entries="@array/themes"
            app:entryValues="@array/values"
            android:defaultValue="1" />
        
        <SwitchPreferenceCompat
            app:title="@string/dynamic_colors"
            app:summary="@string/summary_dynamic_colors"
            app:key="dynamic_colors"
            app:icon="@drawable/theme_light_dark"
            android:defaultValue="false" />
    </PreferenceCategory>
    
    <PreferenceCategory
        app:title="@string/common">
        <SwitchPreferenceCompat
            app:title="@string/enable_vibration"
            app:summary="@string/summary_enable_vibration"
            app:key="vibration"
            app:icon="@drawable/vibrate"
            android:defaultValue="false" />
            
        <SwitchPreferenceCompat
            app:title="@string/show_stroke"
            app:summary="@string/summary_show_stroke"
            app:key="toggle_stroke"
            app:icon="@drawable/dots_square"
            android:defaultValue="true" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
