<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/home"
            android:id="@+id/nav_home"
            android:title="@string/home"
            app:contentDescription="@string/home" />
        <item
            android:icon="@drawable/tune"
            android:id="@+id/nav_preference"
            android:title="@string/preference"
            app:contentDescription="@string/preference" />
        <item
            android:icon="@drawable/information_outline"
            android:id="@+id/nav_about"
            android:title="@string/about"
            app:contentDescription="@string/about" />

    </group>
    <group android:checkableBehavior="none"
        android:id="@+id/social_menu_group">

        <item
            android:icon="@drawable/github"
            android:id="@+id/nav_github"
            android:title="@string/github"
            app:contentDescription="@string/github" />
    </group>


    <group android:checkableBehavior="none"
        android:id="@+id/others_menu_group">
        <item
            android:icon="@drawable/share_variant_outline"
            android:id="@+id/nav_share"
            android:title="@string/share"
            app:contentDescription="@string/share" />

        <item
            android:icon="@drawable/book_information_variant"
            android:id="@+id/nav_licence"
            android:title="@string/open_source_licence"
            app:contentDescription="@string/open_source_licence" />
    </group>


</menu>
